--- a/Views/Messages/Message.cshtml
+++ b/Views/Messages/Message.cshtml
@@ -16,7 +16,7 @@
                     <h3 class="mb-3">Send a Message</h3>
 
                     <div class="form-group">
-                        <label for="SelectedAssignedTo">Select Students:</label>
+                        <label for="SelectedAssignedTo">Select:</label>
                         <select class="form-control" id="SelectedAssignedTo" multiple="multiple" name="SelectedAssignedTo">
                             @foreach (var option in Model.AssignedTo)
                             {
