--- a/Views/Meeting/Meetings.cshtml
+++ b/Views/Meeting/Meetings.cshtml
@@ -6,7 +6,10 @@
 
 @model List<FYPM.Models.Meeting>
 
-<a style="margin-left:10px" href="@Url.Action("AddMeeting")" class="btn btn-primary">Create Meeting</a>
+@if (Session["RoleName"].ToString() == "Supervisor")
+{
+    <a style="margin-left:10px" href="@Url.Action("AddMeeting")" class="btn btn-primary">Create Meeting</a>
+}
 
 
 <div class="wrapper wrapper-content animated fadeInRight">
