--- a/Views/Task/StudentTask.cshtml
+++ b/Views/Task/StudentTask.cshtml
@@ -12,12 +12,12 @@
         appearance: none; /* Remove default styling on certain browsers */
         -webkit-appearance: none; /* Remove default styling on Safari/Chrome */
         -moz-appearance: none; /* Remove default styling on Firefox */
-        padding: 10px; /* Adjust padding as needed */
+
         border: 1px solid #ccc; /* Add a border */
         border-radius: 5px; /* Add rounded corners */
         background-color: #fff; /* Set background color */
         color: #333; /* Set text color */
-        width: 60%; /* Set width to 100% */
+      
         cursor: pointer; /* Change cursor on hover */
     }
 
@@ -37,6 +37,7 @@
             color: #fff; /* Text color for selected option */
         }
 </style>
+
 <div class="card p-3 mt-3">
     <div class="card-title d-flex flex-wrap justify-content-between align-items-center mb-0">
         <h3 class="card-label">
@@ -44,52 +45,54 @@
         </h3>
     </div>
     <div class="card-body">
-        <div class="wrapper wrapper-content animated fadeInRight">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="ibox float-e-margins">
-                        <div class="ibox-content">
-                            <div class="wrapper wrapper-content table-responsive">
-                                <div class="row">
-                                    @if (Model.Count() > 0)
-                                    {
-                                        <table class="table  table-hover table-responsive table-striped">
-                                            <thead>
-                                                <tr>
-                                                    <th>Task Name</th>
-                                                    <th>Task Description</th>
-                                                    <th>Due Date</th>
-                                                    <th>Task Status</th>
-                                                    <th>Document</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody id="table_body" class="scrollable">
-                                                @foreach (var task in Model)
-                                                {
+        <div class="card-body">
+            <div class="wrapper wrapper-content animated fadeInRight">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="ibox float-e-margins">
+                            <div class="ibox-content">
+                                <div class="wrapper wrapper-content table-responsive">
+                                    <div class="row">
+                                        @if (Model.Count() > 0)
+                                        {
+                                            <table class="table  table-hover table-responsive table-striped">
+                                                <thead>
                                                     <tr>
-                                                        <td>@task.TaskName</td>
-                                                        <td>@task.TaskDescription</td>
-                                                        <td>@task.DueDate.Value.Date.ToString("MMM, dd yyyy")</td>
-                                                        <td>
-                                                            <select class="custom-select task-status-dropdown" data-task-id="@task.TaskId" data-student-id="@task.AssignedTo">
-                                                                <option value="Not Started" @(task.TaskStatus == "Not Started" ? "selected" : "")>Not Started</option>
-                                                                <option value="In Progress" @(task.TaskStatus == "In Progress" ? "selected" : "")>In Progress</option>
-                                                                <option value="Completed" @(task.TaskStatus == "Completed" ? "selected" : "")>Completed</option>
-                                                            </select>
-
-                                                        </td>
-                                                        <td>
-                                                            <a href="/Task/DownloadDocuments?projectId=@task.ProjectId" class="btn btn-success" target="_blank">Download</a>
-                                                        </td>
+                                                        <th>Task Name</th>
+                                                        <th>Task Description</th>
+                                                        <th>Due Date</th>
+                                                        <th>Task Status</th>
+                                                        <th>Document</th>
                                                     </tr>
-                                                }
-                                            </tbody>
-                                        </table>
-                                    }
-                                    else
-                                    {
-                                        <p>No tasks assigned yet.</p>
-                                    }
+                                                </thead>
+                                                <tbody id="table_body" class="scrollable">
+                                                    @foreach (var task in Model)
+                                                    {
+                                                        <tr>
+                                                            <td>@task.TaskName</td>
+                                                            <td>@task.TaskDescription</td>
+                                                            <td>@task.DueDate.Value.Date.ToString("MMM, dd yyyy")</td>
+                                                            <td>
+                                                                <select class="custom-select task-status-dropdown" data-task-id="@task.TaskId" data-student-id="@task.AssignedTo">
+                                                                    <option value="Not Started" @(task.TaskStatus == "Not Started" ? "selected" : "")>Not Started</option>
+                                                                    <option value="In Progress" @(task.TaskStatus == "In Progress" ? "selected" : "")>In Progress</option>
+                                                                    <option value="Completed" @(task.TaskStatus == "Completed" ? "selected" : "")>Completed</option>
+                                                                </select>
+
+                                                            </td>
+                                                            <td>
+                                                                <a href="/Task/DownloadDocuments?projectId=@task.ProjectId" class="btn btn-success" target="_blank">Download</a>
+                                                            </td>
+                                                        </tr>
+                                                    }
+                                                </tbody>
+                                            </table>
+                                        }
+                                        else
+                                        {
+                                            <p>No tasks assigned yet.</p>
+                                        }
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -97,32 +100,34 @@
                 </div>
             </div>
         </div>
+    </div>
+</div>
 
-        <script src="~/Scripts/jquery-1.10.2.min.js"></script>
-        <script src="~/Scripts/bootstrap.min.js"></script>
-        <script>
-            $(document).ready(function () {
-                $(".task-status-dropdown").change(function () {
-                    var taskId = $(this).data("task-id");
-                    var studentId = $(this).data("student-id");
-                    var newStatus = $(this).val();
+            <script src="~/Scripts/jquery-1.10.2.min.js"></script>
+            <script src="~/Scripts/bootstrap.min.js"></script>
+            <script>
+                $(document).ready(function () {
+                    $(".task-status-dropdown").change(function () {
+                        var taskId = $(this).data("task-id");
+                        var studentId = $(this).data("student-id");
+                        var newStatus = $(this).val();
 
-                    $.ajax({
-                        type: "POST",
-                        url: "/Task/UpdateTaskStatus",
-                        data: { taskId: taskId, studentId: studentId, newStatus: newStatus },
-                        success: function (response) {
-                            if (response.success) {
-                                console.log("Task status updated successfully.");
-                            } else {
-                                console.error("Failed to update task status.");
+                        $.ajax({
+                            type: "POST",
+                            url: "/Task/UpdateTaskStatus",
+                            data: { taskId: taskId, studentId: studentId, newStatus: newStatus },
+                            success: function (response) {
+                                if (response.success) {
+                                    console.log("Task status updated successfully.");
+                                } else {
+                                    console.error("Failed to update task status.");
+                                }
+                            },
+                            error: function () {
+                                console.error("Failed to send task status update request.");
                             }
-                        },
-                        error: function () {
-                            console.error("Failed to send task status update request.");
-                        }
+                        });
                     });
                 });
-            });
-        </script>
+            </script>
 
