--- a/Views/Meeting/StartMeeting.cshtml
+++ b/Views/Meeting/StartMeeting.cshtml
@@ -199,12 +199,12 @@
               Join or leave a Video Call channel.
             -->
             <div class="button-group" style="display:inline-block">
-                <button id="join" type="submit" class="btn btn-primary btn-sm" style="height: 30px;">Join</button>
-                <button id="leave" type="button" class="btn btn-primary btn-sm" style="height: 30px;" disabled>Leave</button>
-                <button id="mute" type="button" class="btn btn-primary btn-sm" style="height: 30px;" onclick="Mute()" disabled>Mute</button>
-                <button id="stopVideo" type="button" class="btn btn-primary btn-sm" style="height: 30px;" onclick="StopVideo()" disabled>Stop Video Sharing</button>
-                <button id="mute" type="button" class="btn btn-primary btn-sm" style="height: 30px;" onclick="UnMute()">UnMute</button>
-                <button id="stopVideo" type="button" class="btn btn-primary btn-sm" style="height: 30px;" onclick="StartVideo()">Start Video Sharing</button>
+                <button id="join" type="submit" class="btn btn-success btn-sm" style="height: 30px;">Join</button>
+                <button id="leave" type="button" class="btn btn-danger btn-sm" style="height: 30px;" disabled>Leave</button>
+                <button id="mute" type="button" class="btn btn-warning btn-sm" style="height: 30px;" onclick="Mute()" disabled>Mute</button>
+                <button id="stopVideo" type="button" class="btn btn-danger btn-sm" style="height: 30px;" onclick="StopVideo()" disabled>Stop Video Sharing</button>
+                <button id="mute" type="button" class="btn btn-success btn-sm" style="height: 30px;" onclick="UnMute()">UnMute</button>
+                <button id="stopVideo" type="button" class="btn btn-info btn-sm" style="height: 30px;" onclick="StartVideo()">Start Video Sharing</button>
                 <div class="collapse-wrapper" style="height: 30px;">
                     <div class="collapse-content">
                         <button class="btn btn-primary btn-sm collapse-btn" type="button" data-toggle="collapse"
