--- a/Views/Task/StudentTask.cshtml
+++ b/Views/Task/StudentTask.cshtml
@@ -81,7 +81,7 @@
 
                                                             </td>
                                                             <td>
-                                                                <a href="/Task/DownloadDocuments?projectId=@task.ProjectId" class="btn btn-success" target="_blank">Download</a>
+                                                                <a href="/Task/DownloadDocuments?projectId=@task.ProjectId" class="btn btn-primary" style ="background-color: DodgerBlue; border: none; color: white; padding: 12px 30px; cursor: pointer; font-size: 20px; "target="_blank">Download</a>
                                                             </td>
                                                         </tr>
                                                     }
