--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,9 +1,48 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+@*<main aria-labelledby="title">
+        <h2 id="title">@ViewBag.Title.</h2>
+        <h3>@ViewBag.Message</h3>
 
-    <p>Use this area to provide additional information.</p>
-</main>
+        <p>Use this area to provide additional information.</p>
+    </main>*@
+
+<div>
+    <form method="post">
+        <div class="form-group">
+            <label asp-for="Name">Name</label>
+            <input asp-for="Name" class="form-control" />
+            <span asp-validation-for="Name"
+                  class="text-muted"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Email">Email</label>
+            <input asp-for="Email" class="form-control" />
+            <span asp-validation-for="Email"
+                  class="text-muted"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Subject">Subject</label>
+            <input asp-for="Subject" class="form-control" />
+            <span asp-validation-for="Subject"
+                  class="text-muted"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="Message">Message</label>
+            <textarea rows="5" cols="15"
+                      asp-for="Message" class="form-control"></textarea>
+            <span asp-validation-for="Message"
+                  class="text-muted"></span>
+        </div>
+        <div>
+            <button type="submit"
+                    class="btn btn-success">
+                Send
+            </button>
+        </div>
+
+    </form>
+</div>
+            
+        
