--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Final Year Project Management System</title>
-
+    <script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php"
+            type="text/javascript">
+    </script>
+    <script src="http://static.ak.fbcdn.net/connect.php/js/FB.Share" type="text/javascript"></script>
     <!-- Add the CSS styles here -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <style>
         /* Paste the CSS styles here */
         /* Style for the main container */
@@ -17,7 +22,7 @@
         h2 {
             color: #333;
             margin-bottom: 20px;
-            text-align:center;
+            text-align: center;
         }
 
         /* About card style */
@@ -66,10 +71,11 @@
         .features p {
             color: #666;
             margin-top: 10px;
-            text-align:center;
+            text-align: center;
         }
+
         .features ul li::before {
-            content: "\2022"; 
+            content: "\2022";
             display: inline-block;
             width: 1em;
             text-align: left;
@@ -81,6 +87,41 @@
             cursor: pointer;
             transition: color 0.3s ease-in-out;
         }
+
+        .fa {
+            padding: 20px;
+            font-size: 30px;
+            width: 50px;
+            text-align: center;
+            text-decoration: none;
+        }
+
+            /* Add a hover effect if you want */
+            .fa:hover {
+                opacity: 0.7;
+            }
+
+
+
+            /* Facebook */
+            .fa.fa-facebook {
+                background: #3B5998;
+                color: white;
+            }
+        /* Twitter */
+        .fa-twitter {
+            background: #55ACEE;
+            color: white;
+        }
+        .fa-linkedin {
+            background: #007bb5;
+            color: white;
+        }
+        .alert-link {
+            text-align: center
+        }
+      
+
     </style>
 </head>
 <body>
@@ -109,6 +150,16 @@
                     <li>Time management and time scheduling.</li>
                 </ul>
                 <p>Our application stands out from other project management tools with its intuitive interface, robust features, and tailored solutions for final year projects.</p>
+                <div>
+                    <div class="alert-link">
+                        <h4>Share Us:</h4>
+                        <a name="sharebutton" class="fa fa-facebook" type="button" href="http://www.facebook.com/sharer.php"></a>
+                        <a name="sharebutton" class="fa fa-twitter" type="button" href="https://twitter.com/intent/tweet?url="></a>
+                        <a name="sharebutton" class="fa fa-linkedin" type="button" href="https://www.linkedin.com/shareArticle?mini=true&url="></a>
+                    </div>
+
+                </div>
+
             </div>
         </div>
     </main>
