--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -60,6 +60,7 @@
             border-color: black !important;
             text-decoration: none;
         }
+
     </style>
 </head>
 <body>
@@ -211,4 +212,4 @@
     </script>
     @RenderSection("scripts", required: false)
 </body>
-</html>ssss
+</html>
