--- a/Views/Task/StudentTask.cshtml
+++ b/Views/Task/StudentTask.cshtml
@@ -81,7 +81,7 @@
 
                                                             </td>
                                                             <td>
-                                                                <a href="/Task/DownloadDocuments?projectId=@task.ProjectId" class="btn btn-primary" style ="background-color: DodgerBlue; border: none; color: white; padding: 12px 30px; cursor: pointer; font-size: 20px; "target="_blank">Download</a>
+                                                                <a href="/Task/DownloadDocuments?projectId=@task.ProjectId" class="fa fa-download" style ="background-color: DodgerBlue; border: none; color: white; padding: 12px 30px; cursor: pointer; font-size: 20px; "target="_blank">Download</a>
                                                             </td>
                                                         </tr>
                                                     }
@@ -102,7 +102,7 @@
         </div>
     </div>
 </div>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
             <script src="~/Scripts/jquery-1.10.2.min.js"></script>
             <script src="~/Scripts/bootstrap.min.js"></script>
             <script>
