--- a/Views/Messages/Message.cshtml
+++ b/Views/Messages/Message.cshtml
@@ -82,7 +82,7 @@
         function MessageSent(response) {
             if (response == 1) {
                 alert("Message Sent !!!");
-                window.location.href = "/Message/Message";
+                window.location.href = "/Sms/SendSms";
             }
         }
     }
