--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -139,7 +139,7 @@
                                 <li class="nav-item"><a class="nav-link" href="/Project/ListAllProjects">Projects</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Project/ProjectRequests">Project Requests </a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Task/ListAllTasks">Tasks</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/Sms/SendSms">Messages</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Sms/Sms">Messages</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Meeting/ListAllMeetings">Meetings</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Result/ListAllResults">Results</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Timetable/ListAllTimetables">Timetable</a></li>
@@ -153,7 +153,7 @@
                                 <li class="nav-item"><a class="nav-link" href="/Project/ListAllStudentProjects">View Projects</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Project/MyProject">My Project</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Task/ShowAllTasks">Tasks Assigned</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/Sms/SendSms">Messages</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/Sms/Sms">Messages</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Meeting/ListAllStudentMeetings">Meetings</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Timetable/ListAllTimetables">Timetable</a></li>
                                 <li class="nav-item"><a class="nav-link" href="/Result/ListAllStudentResults">Results</a></li>
