--- a/Views/Messages/Message.cshtml
+++ b/Views/Messages/Message.cshtml
@@ -72,7 +72,7 @@
 
         $.ajax({
             type: "POST",
-            url: "/Sms/Sms",
+            url: "/Messages/Message",
             data: JSON.stringify(taskData),
             contentType: "application/json; charset=utf-8",
             dataType: "json",
@@ -82,7 +82,7 @@
         function MessageSent(response) {
             if (response == 1) {
                 alert("Message Sent !!!");
-                window.location.href = "/Sms/Sms";
+                window.location.href = "/Messages/Message";
             }
         }
     }
